LIST OF CHANGES FOR NPG-QC PACKAGE

 - Removed an unused script - genotype_call_results_reporter.

release 69.11.1
 - Normalisation of negative controls with PhiX:
     1. added a script to compute linear regression stats,
     2. added a document that captures an interim projetc review.
 - bower dependencies are expressed using https urls as unauth git endpoints
   are not supported in github anymore
 - update bower to 1.8.13
 - update tableExport to 1.26.0

release 69.11.0
 - PDL CPAN Perl package had a flurry of releases recently, the latest
   at this time is 2.074 (2022-02-08). This verson has an undentified
   bug, which results in a failure of the reverse_average_percent_error
   method in the npg_qc::autoqc::role::sequence_error class. The failure
   was observed in the GitHub CI runner and on a local VM.
   Pinned PDL version to 2.068 or earlier since 2.068 is the vrsion we
   have in the latest production software stack and it is known to work.
 - Added a scipt that generates a dataset which is used in the
   computation of linear regression coefficients for normalisation of
   negative controls with PhiX.

release 69.10.1
 - updated documentation

release 69.10.0
 - switch to bcviz@1.3.3
 - Use samplesheet test data instead of XML files.
   Remove all cached LIMS and NPG XML feeds from t/data/autoqc and
   t/data/autoqc/insert_size. Change the tests to use newly generated
   samplesheets in t/data/autoqc/samplesheets. The samplesheets are
   manually edited to reproduce previously available test cases.
 - Make all defined values in artic generic result available for display.
 - pulldown_metrics autoqc results - backward-compatible correct calculation
   of the number of purity filtered bases when using the latest Picard/GATK.

release 69.9.0 
 - Change database column type from unsigned int to insigned bigint
   for columns where we store number of reads and similar values and
   where we do not already set type to bigint. Some NovaSeq runs produce